--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <section>Novidades do Chorme</section>
+    <div class="container"> 
+            <p>Novidades do Chorme</p>
+            <p>Outubro é o mês de Conscientização sobre Cibersegurança. Confira algumas das ferramentas do Chorme para proteger ses dados</p>
     </div>
 </body>
 </html>
